--- a/templates/weather.html
+++ b/templates/weather.html
@@ -19,7 +19,7 @@
 				</div>
 			</a>
 			<br><br>
-			<div style="font-size: 1.6em; color: rgb(175, 184, 178);">
+			<div style="font-size: 1.6em; color: rgb(59, 59, 59);">
 			기준시간: {{date}}<br><br>
 			</div>
 		</center>
@@ -43,7 +43,7 @@
 		<div style='position: absolute'>
 			<img height="800px" width="1200px" src="{{ url_for('static', filename='./map.jpg') }}"/><br>
 			<!-- 강남구 -->
-			<div style="left: 750px; bottom:160px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 750px; bottom:160px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[0]['tmp']}}도/{{data[0]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[0]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -52,9 +52,10 @@
 				{% else %}
 					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray2.png') }}"/>
 				{% endif %}
+				
 			</div>
 			<!-- 강동구 -->
-			<div style="left: 990px; bottom:300px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 990px; bottom:300px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[1]['tmp']}}도/{{data[1]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[1]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -65,7 +66,7 @@
 				{% endif %}
 			</div>
 			<!-- 강북구 -->
-			<div style="left: 650px; bottom:535px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 650px; bottom:535px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[2]['tmp']}}도/{{data[2]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[2]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -76,7 +77,7 @@
 				{% endif %}
 			</div>
 			<!-- 강서구 -->
-			<div style="left: 145px; bottom:330px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 145px; bottom:330px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[3]['tmp']}}도/{{data[3]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[3]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -87,7 +88,7 @@
 				{% endif %}
 			</div>
 			<!-- 관악구 -->
-			<div style="left: 475px; bottom:70px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 475px; bottom:70px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[4]['tmp']}}도/{{data[4]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[4]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -98,7 +99,7 @@
 				{% endif %}
 			</div>
 			<!-- 광진구 -->
-			<div style="left: 840px; bottom:275px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 840px; bottom:275px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[5]['tmp']}}도/{{data[5]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[5]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -109,7 +110,7 @@
 				{% endif %}
 			</div>
 			<!-- 구로구 -->
-			<div style="left: 210px; bottom:140px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 210px; bottom:140px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[6]['tmp']}}도/{{data[6]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[6]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -120,7 +121,7 @@
 				{% endif %}
 			</div>
 			<!-- 금천구 -->
-			<div style="left: 345px; bottom:85px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 345px; bottom:85px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[7]['tmp']}}도/{{data[7]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[7]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -131,7 +132,7 @@
 				{% endif %}
 			</div>
 			<!-- 노원구 -->
-			<div style="left: 820px; bottom:560px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 820px; bottom:560px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[8]['tmp']}}도/{{data[8]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[8]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -142,7 +143,7 @@
 				{% endif %}
 			</div>
 			<!-- 도봉구 -->
-			<div style="left: 710px; bottom:600px; width: 440px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 710px; bottom:600px; width: 440px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[9]['tmp']}}도/{{data[9]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[9]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -153,7 +154,7 @@
 				{% endif %}
 			</div>
 			<!-- 동대문구 -->
-			<div style="left: 760px; bottom:380px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 760px; bottom:380px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[10]['tmp']}}도/{{data[10]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[10]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -164,7 +165,7 @@
 				{% endif %}
 			</div>
 			<!-- 동작구 -->
-			<div style="left: 475px; bottom:170px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 475px; bottom:170px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[11]['tmp']}}도/{{data[11]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[11]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -175,7 +176,7 @@
 				{% endif %}
 			</div>
 			<!-- 마포구 -->
-			<div style="left: 380px; bottom:325px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 380px; bottom:325px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[12]['tmp']}}도/{{data[12]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[12]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -186,7 +187,7 @@
 				{% endif %}
 			</div>
 			<!-- 서대문구 -->
-			<div style="left: 445px; bottom:365px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 445px; bottom:365px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[13]['tmp']}}도/{{data[13]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[13]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -197,7 +198,7 @@
 				{% endif %}
 			</div>
 			<!-- 서초구 -->
-			<div style="left: 640px; bottom:125px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 640px; bottom:125px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[14]['tmp']}}도/{{data[14]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[14]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -208,7 +209,7 @@
 				{% endif %}
 			</div>
 			<!-- 성동구 -->
-			<div style="left: 725px; bottom:300px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 725px; bottom:300px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[15]['tmp']}}도/{{data[15]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[15]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -219,7 +220,7 @@
 				{% endif %}
 			</div>
 			<!-- 성북구 -->
-			<div style="left: 660px; bottom:438px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 660px; bottom:438px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[16]['tmp']}}도/{{data[16]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[16]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -230,7 +231,7 @@
 				{% endif %}
 			</div>
 			<!-- 송파구 -->
-			<div style="left: 900px; bottom:185px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 900px; bottom:185px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[17]['tmp']}}도/{{data[17]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[17]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -241,7 +242,7 @@
 				{% endif %}
 			</div>
 			<!-- 양천구 -->
-			<div style="left: 240px; bottom:213px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 240px; bottom:213px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[18]['tmp']}}도/{{data[18]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[18]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -252,7 +253,7 @@
 				{% endif %}
 			</div>
 			<!-- 영등포구 -->
-			<div style="left: 385px; bottom:220px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 385px; bottom:220px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[19]['tmp']}}도/{{data[19]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[19]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -263,7 +264,7 @@
 				{% endif %}
 			</div>
 			<!-- 용산구 -->
-			<div style="left: 565px; bottom:243px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 565px; bottom:243px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[20]['tmp']}}도/{{data[20]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[20]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -274,7 +275,7 @@
 				{% endif %}
 			</div>
 			<!-- 은평구 -->
-			<div style="left: 430px; bottom:495px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 430px; bottom:495px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[21]['tmp']}}도/{{data[21]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[21]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -285,7 +286,7 @@
 				{% endif %}
 			</div>
 			<!-- 종로구 -->
-			<div style="left: 565px; bottom:385px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 565px; bottom:385px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[22]['tmp']}}도/{{data[22]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[22]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -296,7 +297,7 @@
 				{% endif %}
 			</div>
 			<!-- 중구 -->
-			<div style="left: 605px; bottom:322px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 605px; bottom:322px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[23]['tmp']}}도/{{data[23]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[23]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
@@ -307,7 +308,7 @@
 				{% endif %}
 			</div>
 			<!-- 중랑구 -->
-			<div style="left: 868px; bottom:420px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+			<div style="left: 868px; bottom:420px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute; color:rgb(124, 122, 122);">
 				{{data[24]['tmp']}}도/{{data[24]['rain']}}%<br>&nbsp;&nbsp;
 				{% if data[24]['sky'] == 'sunny' %}
 					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
